# WZ2100_json_editor

./: CMakeLists.txt  README.md
logic/: CMakeLists.txt  connectionGraph.cpp  connectionGraph.hpp  connectionsNode.cpp  connectionsNode.hpp
logic/Controllers/: JsonDataController.cpp  JsonDataController.hpp  editTableController.cpp  editTableController.hpp  mainController.cpp  mainController.hpp
logic/Models/: JsonDataModel.cpp  JsonDataModel.hpp  editTableModel.cpp  editTableModel.hpp
ui/: CMakeLists.txt
ui/src/: edge.hpp  editTableWidget.cpp  editTableWidget.hpp  editTableWidget.ui  emitterObject.cpp  emitterObject.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  node.cpp  node.hpp  researchWidget.cpp  researchWidget.hpp  resources.qrc
